[tool.poetry]
name = "streamcontroller"
version = "1.1.0"
description = ""
authors = ["b0wter <b0wter@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.11"
streamdeck = "^0.7.3"
wheel = "^0.34.2"
pynput = "^1.6.8"
xlib = "^0.21"
argparse = "^1.4.0"
typed-ast = "^1.5.5"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
